<resources>
    <string name="app_name">Tally Stacker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="fragment_leagues">Leagues</string>
    <string name="fragment_grid">Grids</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_show_message_notifications">Game start notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="no_games">No Game Record.</string>
    <string name="fetch_games">Fetch game form Leagues sub-menu.</string>
    <string name="please_create_a_new_one">Please create a new one</string>
    <string name="no_grid">Empty Grid</string>
    <string name="fragment_dash">DashBoard</string>
    <string name="schedule">Schedule: %1$s</string>
    <string name="bid_amount">Bid %1$s%2$s</string>
    <string name="upcoming_games">Upcoming Games</string>
    <string name="fetching_data">Fetching data from sources.</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="team_vs_team">%1$s / %2$s</string>
    <string name="team_vs_team_full">%1$s vs. %2$s</string>
    <string name="ending_no">Ending No.</string>
    <string name="starting_no">Starting No.</string>
    <string name="range_1_2">Range: %1$s-%2$s</string>
    <string name="loading">loading…</string>
    <string name="loading_from_database">Loading from database.</string>
    <string name="please_wait">Please wait…</string>
    <string name="force_add">Force Add</string>
    <string name="keep_on_updating">Keep on Updating</string>
    <string name="rows">Rows</string>
    <string name="columns">Columns</string>
    <string name="grid_name">Grid Name</string>
    <string name="enable_edit">Enable Edit</string>
    <string name="last_updated">Last Updated</string>
    <string name="remove_button">Remove Button</string>
    <string name="create_new_grid">Create new Grid</string>
    <string name="back">Back</string>
    <string name="add_league">Add League</string>
    <string name="running_in_background">TallyStacker is running in Background</string>
    <string name="change_settings">Touch to change settings.</string>
    <string name="action_settings">Settings</string>
    <string name="bid_fetch_time">Fetch Time for Bids</string>
    <string name="bid_sync">Bids Sync</string>

    <!--KEYS-->
    <string name="key_notification_show">notifications_show</string>
    <string name="key_notification_ringtone">notifications_ringtone</string>
    <string name="key_notification_vibrate">notifications_vibrate</string>
    <string name="key_bid_update_time">bid_update_time</string>

    <!--PREF HEADER KEYS-->
    <string name="pref_key_storage_data_sync">pref_key_storage_data_sync</string>
    <string name="pref_key_storage_notification">pref_key_storage_notification</string>
    <string name="show_notification">Show Notifications</string>


    <string name="multiprocess_preferences_authority" translatable="false">PREFERENCE_AUTHORITY</string>
    <string name="key_first_run">first_run</string>
    <string name="league_start_end">%1$s (%2$s - %3$s)</string>
</resources>
