<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard_white_24px"
            android:title="@string/fragment_dash" />
        <item
            android:id="@+id/nav_grid"
            android:icon="@drawable/ic_view_module_white_24px"
            android:title="@string/fragment_grid" />
        <item
            android:id="@+id/nav_league"
            android:icon="@drawable/ic_league_white_24px"
            android:title="@string/fragment_leagues" />

    </group>

    <!--<item android:title="Settings">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_settings"-->
                <!--android:icon="@drawable/ic_settings_white_24px"-->
                <!--android:title="Application" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
